Changes to BLue Scale

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3249,23 +3249,23 @@
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #0A1C28;
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #41848F;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #72A7A3;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #97C0B7;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #EEE9D1;
 		}
 
 		.wrapper.style3 {
