--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3269,11 +3269,11 @@
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #EEE9D1;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #EEE9D1;
 		}
 
 		.wrapper.fullscreen {
