--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3265,15 +3265,15 @@
 		}
 
 		.wrapper.style2-alt {
-			background-color: #EEE9D1;
+			background-color: #3CA774;
 		}
 
 		.wrapper.style3 {
-			background-color: #EEE9D1;
+			background-color: #3CA774;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #EEE9D1;
+			background-color: #3CA774;
 		}
 
 		.wrapper.fullscreen {
