--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3867,7 +3867,7 @@
 
 						#sidebar nav a:after {
 							background-image: none;
-							background-color: #b74e91;
+							background-color: #0A1C28;
 						}
 
 		}
